--- a/src/app/shared/components/layouts/header/header.component.html
+++ b/src/app/shared/components/layouts/header/header.component.html
@@ -11,6 +11,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" routerLink="/home">Home</a>
                     </li>
+                    <li class="nav-item" *ngIf="isAdmin">
+                        <a class="nav-link active" aria-current="page" routerLink="/admin">Admin</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="javascript:void(0)" (click)="logout()">Logout</a>
                     </li>
