--- a/src/app/modules/admin/products/products.component.html
+++ b/src/app/modules/admin/products/products.component.html
@@ -7,11 +7,11 @@
         <table class="table row-border hover">
             <thead>
                 <tr>
-                    <th>Email</th>
                     <th>Name</th>
                     <th>Description</th>
                     <th>Price</th>
                     <th>Quantity</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
