--- a/src/app/modules/admin/view-order/view-order.component.html
+++ b/src/app/modules/admin/view-order/view-order.component.html
@@ -1,4 +1,4 @@
-<section class="">
+<section *ngIf="order.product">
   <div class="container">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-lg-12">
