--- a/src/app/modules/admin/products/products.component.html
+++ b/src/app/modules/admin/products/products.component.html
@@ -7,6 +7,7 @@
         <table class="table row-border hover">
             <thead>
                 <tr>
+                    <th>Image</th>
                     <th>Name</th>
                     <th>Description</th>
                     <th>Price</th>
@@ -16,8 +17,11 @@
             </thead>
             <tbody>
                 <tr *ngFor="let product of products">
+                    <td>
+                        <img [src]="product.imagePath" [alt]="product.name" width="40" height="40">
+                    </td>
                     <td>{{ product.name }}</td>
-                    <td>{{ product.description }}</td>
+                    <td>{{ product.description.length > 100 ? product.description.substring(0, 100)+' ...' : product.description }}</td>
                     <td>{{ product.price | currency }}</td>
                     <td>{{ product.quantity }}</td>
                     <td>
@@ -35,7 +39,7 @@
                     </td>
                 </tr>
                 <tr *ngIf="!products.length">
-                    <td colspan="5" align="center">
+                    <td colspan="6" align="center">
                         No products found
                     </td>
                 </tr>
